# CatAPI

./: README.md  pyproject.toml
app/: main.py  mainMOD.py  mainOLD.py
tests/: test_app.py
