[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Lucas Jaroszewski <ljnunes@outlook.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.1"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=1.1.6"]
build-backend = "poetry.core.masonry.api"
